--- a/styles/sass/abstracts/_mixins.scss
+++ b/styles/sass/abstracts/_mixins.scss
@@ -5,6 +5,7 @@
     font-size: 8.0rem;
     line-height: 9.2rem;
     letter-spacing: 0.1rem;
+    text-transform: uppercase;
 }
 
 // h3
@@ -12,13 +13,15 @@
     font-family: 'Abril Fatface', cursive;
     font-size: 4.2rem;
     letter-spacing: 0.1rem;
-}
+    text-transform: uppercase;
+} 
 
 // h4
 @mixin headingTextFavouriteThingsPhotosAbout {
     font-family: 'Abril Fatface', cursive;
     font-size: 3.2rem;
     letter-spacing: 0.1rem;
+    text-transform: uppercase;
 }
 
 // h5
@@ -26,6 +29,7 @@
     font-family: 'Abril Fatface', cursive;
     font-size: 2.4rem;
     letter-spacing: 0.1rem;
+    text-transform: uppercase;
 }
 
 @mixin menuTextHomeAbout {
