--- a/styles/style.css
+++ b/styles/style.css
@@ -269,24 +269,28 @@ h2 {
   font-size: 8.0rem;
   line-height: 9.2rem;
   letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 
 h3 {
   font-family: 'Abril Fatface', cursive;
   font-size: 4.2rem;
   letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 
 h4 {
   font-family: 'Abril Fatface', cursive;
   font-size: 3.2rem;
   letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 
 h5 {
   font-family: 'Abril Fatface', cursive;
   font-size: 2.4rem;
   letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 
 p {
@@ -326,4 +330,5 @@ h1 {
   font-size: 8.0rem;
   line-height: 9.2rem;
   letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
