--- a/styles/style.css
+++ b/styles/style.css
@@ -309,6 +309,44 @@ img {
   margin: 0 auto;
 }
 
+.topNavBar {
+  background-color: #345231;
+  width: 100%;
+  padding: 24px 0;
+  position: fixed;
+  z-index: 1;
+}
+
+.topNavBar__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 55%;
+  margin: 0 auto;
+}
+
+.topNavBar__link {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 2.0rem;
+  text-align: right;
+  line-height: 2.9rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  color: #F6F6F6;
+}
+
+.topNavBar__link:not(.willowLogo):hover {
+  color: #E4A436;
+}
+
+header {
+  padding-top: 100px;
+}
+
 footer {
   width: 100;
   background-color: #222222;
@@ -325,10 +363,45 @@ footer {
   overflow: hidden;
 }
 
+button {
+  background-color: #E4A436;
+  text-transform: uppercase;
+  padding: 10px 30px;
+  font-family: 'Abril Fatface', cursive;
+  font-size: 2.0rem;
+  text-align: center;
+  line-height: 3.2rem;
+  letter-spacing: 0.1rem;
+}
+
 h1 {
   font-family: 'Abril Fatface', cursive;
-  font-size: 8.0rem;
+  font-size: 15.2rem;
   line-height: 9.2rem;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
+  color: #F6F6F6;
+  position: absolute;
+  top: 55px;
+  left: 60px;
+}
+
+.homeHeader {
+  background-color: #345231;
+  padding: 300px 0 285px 0;
+}
+
+.homeHeaderWrapper {
+  position: relative;
+}
+
+.homeHeaderWrapper___circleImg {
+  display: inline-block;
+  border: 1px solid red;
+}
+
+.homeHeaderWrapper__mainProfileImg {
+  position: absolute;
+  top: -180px;
+  right: 0;
 }
