--- a/styles/sass/pages/_home.scss
+++ b/styles/sass/pages/_home.scss
@@ -1,7 +1,38 @@
 h1 {
     font-family: 'Abril Fatface', cursive;
-    font-size: 8.0rem;
+    font-size: 15.2rem;
     line-height: 9.2rem;
     letter-spacing: 0.1rem;
     text-transform: uppercase;
+    color: $whiteShade;
+    // border: 1px solid pink;
+    position: absolute;
+    top: 55px;
+    left: 60px;
+}
+
+.homeHeader {
+    background-color: $pine;
+    padding: 300px 0 285px 0;
+}
+
+.homeHeaderWrapper {
+    position: relative;
+    // border: 1px solid aqua;
+    // &__title::before {
+    //     content: '';
+    //     background-image: url('./willowAssets/circle-text.png');
+    //     display: block;
+    //     background-size: auto;
+    //     position: absolute;
+    // }
+    &___circleImg {
+        display: inline-block;
+        border: 1px solid red;
+    }
+    &__mainProfileImg {
+        position: absolute;
+        top: -180px;
+        right: 0;
+    }
 }
