--- a/styles/sass/pages/_home.scss
+++ b/styles/sass/pages/_home.scss
@@ -24,7 +24,7 @@ h1 {
 }
 
 .whoseWillow {
-    background-color: #F6F6F6;
+    background-color: $whiteShade;
     text-align: center;
     padding: 120px 0 160px 0;
     &__text, 
@@ -33,8 +33,79 @@ h1 {
     }
 } 
 
+.favouriteThings {
+    border: 1px solid blue;
+}
+
+.bucketList {
+    border: 1px solid fuchsia;
+}
+
 .fullWidthMeadow {
     &__img {
         width: 100%;
     }
 }
+
+.favouriteThings {
+    display: flex; 
+    position: relative;
+    &__box {
+        width: 50%;
+        padding: 85px;
+        border: 2px dotted lavender;
+        position: relative;
+    }
+    &__image {
+        position: absolute;
+        top: -50px;
+        right: 20px;
+        box-shadow: 20px 20px 0 0 $greenGrey, -150px 20px 0 0 $greenGrey;
+    }
+    &__paragraph,
+    &__button {
+        margin-top: 30px;
+    }
+}
+
+.bucketList {
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+    &__box {
+        text-align: right;
+        width: 50%;
+        padding: 0 100px 100px 100px;
+        border: 2px dotted rosybrown;
+        position: relative;
+    }
+    &__title {
+        margin-top: 30px;
+    }
+    &__image {
+        position: absolute;
+        bottom: -30px;
+        left: 0;
+        box-shadow: 20px 20px 0 0 $pine, 150px 20px 0 0 $pine;
+    }
+    &__paragraph, 
+    &__button {
+        margin-top: 30px; 
+    }
+}
+
+.willowsJourney {
+    background-color: $whiteShade;
+    &__container {
+        display: flex;
+    }
+    &__imgBox {
+        width: 40%;
+        border: 1px solid orange;
+    }
+    &__textBox {
+        width: 60%;
+        border: 1px solid purple;
+    }
+}
+
