--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -3,4 +3,9 @@ footer {
     background-color: #222222;
     text-align: center;
     color: $whiteShade;
+    padding: 5px 0;
+}
+
+footer p {
+    font-size: 1.8rem;
 }
