--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -23,6 +23,7 @@
 // components
 @import 'components/accessibility';
 @import 'components/buttons'; 
+@import 'components/forms';
 
 // pages
 @import 'pages/home';
