--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -1,8 +1,8 @@
 footer {
-    width: 100;
-    background-color: #222222;
-    text-align: center;
+    background-color: $black;
     color: $whiteShade;
+    text-align: center;
+    width: 100;
     padding: 5px 0;
 }
 
