--- a/styles/style.css
+++ b/styles/style.css
@@ -268,8 +268,8 @@ html {
 h2 {
   font-family: 'Abril Fatface', cursive;
   font-size: 8.0rem;
-  line-height: 9.2rem;
   letter-spacing: 0.1rem;
+  line-height: 9.2rem;
   text-transform: uppercase;
 }
 
@@ -331,20 +331,20 @@ img {
 
 .topNavBar__link {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
   font-size: 2.0rem;
-  text-align: right;
-  line-height: 2.9rem;
+  font-weight: 700;
   letter-spacing: 0.1rem;
-  text-transform: uppercase;
+  line-height: 2.9rem;
+  text-align: right;
   color: #F6F6F6;
+  text-transform: uppercase;
 }
 
 .topNavBar__word {
+  color: #F6F6F6;
   font-family: 'Abril Fatface', cursive;
   font-size: 3.8rem;
   text-transform: uppercase;
-  color: #F6F6F6;
   position: relative;
   top: -5px;
 }
@@ -358,10 +358,10 @@ header {
 }
 
 footer {
-  width: 100;
-  background-color: #222222;
-  text-align: center;
+  background-color: #1F1F1F;
   color: #F6F6F6;
+  text-align: center;
+  width: 100;
   padding: 5px 0;
 }
 
@@ -384,17 +384,17 @@ button {
   padding: 10px 30px;
   font-family: 'Abril Fatface', cursive;
   font-size: 2.0rem;
-  text-align: center;
-  line-height: 3.2rem;
   letter-spacing: 0.1rem;
+  line-height: 3.2rem;
+  text-align: center;
 }
 
 input,
 textarea {
   border-style: none;
+  color: #1F1F1F;
   font-size: 2.0rem;
   padding: 25px 25px 25px 30px;
-  color: #1F1F1F;
 }
 
 textarea {
@@ -406,12 +406,12 @@ button[type="submit"] {
 }
 
 h1 {
+  color: #F6F6F6;
   font-family: 'Abril Fatface', cursive;
   font-size: 15.2rem;
-  line-height: 9.2rem;
   letter-spacing: 0.1rem;
+  line-height: 9.2rem;
   text-transform: uppercase;
-  color: #F6F6F6;
   position: absolute;
   top: 55px;
   left: 60px;
@@ -460,11 +460,11 @@ h1 {
 }
 
 .favouriteThings__image {
+  -webkit-box-shadow: 18px 18px 0 0 #709B6B, -150px 18px 0 0 #709B6B;
+          box-shadow: 18px 18px 0 0 #709B6B, -150px 18px 0 0 #709B6B;
   position: absolute;
   top: -55px;
   right: 20px;
-  -webkit-box-shadow: 18px 18px 0 0 #709B6B, -150px 18px 0 0 #709B6B;
-          box-shadow: 18px 18px 0 0 #709B6B, -150px 18px 0 0 #709B6B;
 }
 
 .favouriteThings__paragraph, .favouriteThings__button {
@@ -490,10 +490,10 @@ h1 {
 }
 
 .bucketList__image {
-  position: absolute;
-  left: 0;
   -webkit-box-shadow: 20px 20px 0 0 #345231, 150px 20px 0 0 #345231;
           box-shadow: 20px 20px 0 0 #345231, 150px 20px 0 0 #345231;
+  position: absolute;
+  left: 0;
 }
 
 .bucketList__paragraph, .bucketList__button {
@@ -564,14 +564,13 @@ h1 {
 }
 
 .additionalLinks__box {
-  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 50%;
 }
 
 .additionalLinks__circle {
-  border: 1px solid pink;
   background-color: #E4A436;
   border-radius: 50%;
   padding: 15px;
@@ -592,8 +591,8 @@ h1 {
 
 .blogAndNewsHeader {
   background-image: url("../willowAssets/blog-image-1.jpg");
-  background-size: cover;
   background-position: center;
+  background-size: cover;
   padding: 345px 0 0 0;
 }
 
@@ -604,8 +603,8 @@ h1 {
 }
 
 .midPortion {
-  padding: 85px 0;
   background-color: #F6F6F6;
+  padding: 85px 0;
 }
 
 .blogMidPortionTopHalf,
@@ -653,8 +652,8 @@ h1 {
 }
 
 .aboutWillow__link {
-  font-weight: 700;
   color: #709B6B;
+  font-weight: 700;
 }
 
 .recentPosts {
@@ -687,8 +686,8 @@ h1 {
 }
 
 .comments__itemTwo {
-  margin-top: 20px;
   border-bottom: 5px solid #709B6B;
+  margin-top: 20px;
 }
 
 .comments__imageOne, .comments__imageTwo {
@@ -702,7 +701,6 @@ h1 {
 }
 
 .submitCommentForm {
-  margin-top: 35px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -710,6 +708,7 @@ h1 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 35px;
 }
 
 .submitCommentForm__partOne {
@@ -741,8 +740,8 @@ h1 {
 
 .contactHeader {
   background-image: url("../willowAssets/contact-image-1.jpg");
-  background-size: cover;
   background-position: center;
+  background-size: cover;
   padding: 345px 0 0 0;
 }
 
@@ -768,8 +767,8 @@ h1 {
 }
 
 .mainPortionContact__leftSide {
-  margin-right: 40px;
   width: 30%;
+  margin-right: 40px;
 }
 
 .mainPortionContact__rightSide {
