icons are accessible

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,4 @@
-/* Naming Convention Used: BEM (https://css-tricks.com/bem-101/) w/ camelCase */ 
+/* Naming Convention Used: BEM (https://css-tricks.com/bem-101/) w/ camelCase and Media Query Bubbling (https://www.creativebloq.com/how-to/how-to-structure-media-queries-in-sass) */ 
 
 /* File & Folder Convention Used: 7-1 Pattern (https://sass-guidelin.es/#the-7-1-pattern) w/ camelCase */ 
 
