--- a/styles/sass/pages/_home.scss
+++ b/styles/sass/pages/_home.scss
@@ -16,10 +16,74 @@ h1 {
     &__wrapper {
         position: relative;
     }
+    &__text {
+        position: relative;
+    }
     &__mainProfileImg {
             position: absolute;
             top: -180px;
             right: 0;
+    }
+    @media (max-width: 1261px) {
+        &__text {
+            max-width: 750px;
+            margin: 0 auto;
+            top: -150px;
+            left: 0;
+        }
+        &__mainProfileImg {
+            margin: 0 auto;
+            position: relative;
+            top: 0;
+        }
+    }
+    @media (max-width: 745px) {
+        &__wrapper {
+            padding: 0 100px;
+        }
+        &__text img {
+            display: none;
+        }
+        &__title {
+            font-size: 10.0rem;
+            text-align: center;
+            margin: 0 auto;
+            position: relative;
+            top: 0;
+            left: 0;
+        }
+        &__title::before {
+            content: 'Daily Musings Of';
+            font-family: 'Montserrat', sans-serif;
+            font-size: 2.0rem;
+            display: block;
+        }
+    }
+    @media (max-width: 555px) {
+        padding: 300px 0 200px 0;
+        &__title {
+            font-size: 7.0rem;
+        }
+        &__mainProfileImg {
+            top: -20px;
+        }
+    }
+    @media (max-width: 420px) {
+        &__title {
+            font-size: 5.0rem;
+        }
+        &__title::before {
+            top: 120px;
+        }
+    }
+    @media (max-width: 355px) {
+        padding: 300px 0 20px 0;
+        &__title {
+            font-size: 3.0rem;
+        }
+        &__mainProfileImg {
+            top: -100px;
+        }
     }
 }
 
@@ -31,13 +95,19 @@ h1 {
     &__button {
         margin-top: 30px;
     }
-} 
-
-.fullWidthMeadow {
-    &__img {
-        width: 100%;
+    @media (max-width: 1261px) {
+        &__text {
+            max-width: 500px;
+            margin: 30px auto 0 auto;
+        }
     }
-}
+    @media (max-width: 555px) {
+        &__text {
+            font-size: 1.6rem;
+            margin: 30px 30px 0 30px;
+        }
+    }
+} 
 
 .favouriteThings {
     display: flex; 
@@ -56,6 +126,22 @@ h1 {
     &__paragraph,
     &__button {
         margin-top: 30px;
+    }
+    @media (max-width: 1261px){
+        &__paragraph {
+            max-width: 500px;
+        }
+    }
+    @media (max-width: 745px) {
+        text-align: center;
+        flex-direction: column;
+        &__box {
+            margin: 0 auto;
+            padding: 0;
+        }
+        &__image {
+            position: relative;
+        }
     }
 }
 
@@ -78,6 +164,23 @@ h1 {
     &__button {
         margin-top: 30px; 
     }
+    @media (max-width: 1261px){
+        &__paragraph {
+            max-width: 500px;
+        }
+    }
+    @media (max-width: 745px) {
+        flex-direction: column;
+        margin-top: 50px;
+        &__box {
+            text-align: center;
+            margin: 25px auto 50px auto;
+            padding: 0;
+        }
+        &__image {
+            position: relative;
+        }
+    }
 }
 
 .willowsJourney {
@@ -99,6 +202,27 @@ h1 {
     &__imgBox img {
         box-shadow: 15px 15px 0 0 $greenGrey;
     }
+    @media (max-width: 1261px) {
+        &__paragraph {
+            max-width: 550px;
+        }
+    }
+    @media (max-width: 952px) {
+        &__container {
+            text-align: center;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__title {
+            margin-top: 50px;
+        }
+    }
+}
+
+.fullWidthMeadow {
+    &__img {
+        width: 100%;
+    }
 }
 
 .threeImageGallery {
@@ -115,6 +239,19 @@ h1 {
     }
     &__box:last-child {
         margin-right: 0;
+    }
+    @media (max-width: 420px){
+        &__container {
+            flex-direction: column;
+            padding: 0;
+        }
+        &__box {
+            width: 100%;
+            margin: 0;
+        }
+        &__box img {
+            width: 100%;
+        }
     }
 }
 
@@ -146,6 +283,21 @@ h1 {
     }
     &__box i {
         font-size: 20px; 
+    }
+    @media (max-width: 720px) {
+        .additionalLinks {
+            &__topHalf, 
+            &__bottomHalf {
+                flex-direction: column;
+            }
+            &__box {
+                width: 100%;
+                padding: 0 50px;
+            }
+            &__secondBox {
+                margin-top: 50px;
+            }
+        }
     }
 }
 
