--- a/styles/style.css
+++ b/styles/style.css
@@ -312,6 +312,7 @@ img {
 
 .topNavBar {
   background-color: #345231;
+  border: none;
   width: 100%;
   padding: 24px 0;
   position: fixed;
@@ -349,8 +350,55 @@ img {
   top: -5px;
 }
 
-.topNavBar__link:hover {
+.topNavBar__hamburgerButton, .topNavBar__exitButton {
+  display: none;
+  position: absolute;
+  top: 15px;
+  right: 0;
+  cursor: pointer;
+}
+
+.topNavBar__dropdown {
+  display: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.topNavBar__dropdownLink {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.0rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  line-height: 2.9rem;
+  text-align: right;
+  color: #F6F6F6;
+}
+
+.topNavBar__link:hover, .topNavBar__dropdownLink:hover {
   color: #E4A436;
+}
+
+@media (max-width: 970px) {
+  .topNavBar {
+    padding: 40px 0;
+  }
+  .topNavBar__list {
+    display: none;
+  }
+}
+
+.border.topNavBar {
+  border-bottom: 5px solid #709B6B;
+}
+
+.show.topNavBar__exitButton {
+  display: block;
+}
+
+@media (max-width: 970px) {
+  .show.topNavBar__hamburgerButton {
+    display: block;
+  }
 }
 
 header {
@@ -426,10 +474,84 @@ h1 {
   position: relative;
 }
 
+.homeHeader__text {
+  position: relative;
+}
+
 .homeHeader__mainProfileImg {
   position: absolute;
   top: -180px;
   right: 0;
+}
+
+@media (max-width: 1261px) {
+  .homeHeader__text {
+    max-width: 750px;
+    margin: 0 auto;
+    top: -150px;
+    left: 0;
+  }
+  .homeHeader__mainProfileImg {
+    margin: 0 auto;
+    position: relative;
+    top: 0;
+  }
+}
+
+@media (max-width: 745px) {
+  .homeHeader__wrapper {
+    padding: 0 100px;
+  }
+  .homeHeader__text img {
+    display: none;
+  }
+  .homeHeader__title {
+    font-size: 10.0rem;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  .homeHeader__title::before {
+    content: 'Daily Musings Of';
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.0rem;
+    display: block;
+  }
+}
+
+@media (max-width: 555px) {
+  .homeHeader {
+    padding: 300px 0 200px 0;
+  }
+  .homeHeader__title {
+    font-size: 7.0rem;
+  }
+  .homeHeader__mainProfileImg {
+    top: -20px;
+  }
+}
+
+@media (max-width: 420px) {
+  .homeHeader__title {
+    font-size: 5.0rem;
+  }
+  .homeHeader__title::before {
+    top: 120px;
+  }
+}
+
+@media (max-width: 355px) {
+  .homeHeader {
+    padding: 300px 0 20px 0;
+  }
+  .homeHeader__title {
+    font-size: 3.0rem;
+  }
+  .homeHeader__mainProfileImg {
+    top: -100px;
+  }
 }
 
 .whoseWillow {
@@ -442,8 +564,18 @@ h1 {
   margin-top: 30px;
 }
 
-.fullWidthMeadow__img {
-  width: 100%;
+@media (max-width: 1261px) {
+  .whoseWillow__text {
+    max-width: 500px;
+    margin: 30px auto 0 auto;
+  }
+}
+
+@media (max-width: 555px) {
+  .whoseWillow__text {
+    font-size: 1.6rem;
+    margin: 30px 30px 0 30px;
+  }
 }
 
 .favouriteThings {
@@ -469,6 +601,29 @@ h1 {
 
 .favouriteThings__paragraph, .favouriteThings__button {
   margin-top: 30px;
+}
+
+@media (max-width: 1261px) {
+  .favouriteThings__paragraph {
+    max-width: 500px;
+  }
+}
+
+@media (max-width: 745px) {
+  .favouriteThings {
+    text-align: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .favouriteThings__box {
+    margin: 0 auto;
+    padding: 0;
+  }
+  .favouriteThings__image {
+    position: relative;
+  }
 }
 
 .bucketList {
@@ -500,6 +655,30 @@ h1 {
   margin-top: 30px;
 }
 
+@media (max-width: 1261px) {
+  .bucketList__paragraph {
+    max-width: 500px;
+  }
+}
+
+@media (max-width: 745px) {
+  .bucketList {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 50px;
+  }
+  .bucketList__box {
+    text-align: center;
+    margin: 25px auto 50px auto;
+    padding: 0;
+  }
+  .bucketList__image {
+    position: relative;
+  }
+}
+
 .willowsJourney {
   background-color: #F6F6F6;
   padding: 145px 0 85px 0;
@@ -528,6 +707,32 @@ h1 {
           box-shadow: 15px 15px 0 0 #709B6B;
 }
 
+@media (max-width: 1261px) {
+  .willowsJourney__paragraph {
+    max-width: 550px;
+  }
+}
+
+@media (max-width: 952px) {
+  .willowsJourney__container {
+    text-align: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .willowsJourney__title {
+    margin-top: 50px;
+  }
+}
+
+.fullWidthMeadow__img {
+  width: 100%;
+}
+
 .threeImageGallery__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -546,6 +751,23 @@ h1 {
 
 .threeImageGallery__box:last-child {
   margin-right: 0;
+}
+
+@media (max-width: 420px) {
+  .threeImageGallery__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+  }
+  .threeImageGallery__box {
+    width: 100%;
+    margin: 0;
+  }
+  .threeImageGallery__box img {
+    width: 100%;
+  }
 }
 
 .additionalLinks {
@@ -587,6 +809,22 @@ h1 {
 
 .additionalLinks__box i {
   font-size: 20px;
+}
+
+@media (max-width: 720px) {
+  .additionalLinks .additionalLinks__topHalf, .additionalLinks .additionalLinks__bottomHalf {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .additionalLinks .additionalLinks__box {
+    width: 100%;
+    padding: 0 50px;
+  }
+  .additionalLinks .additionalLinks__secondBox {
+    margin-top: 50px;
+  }
 }
 
 .blogAndNewsHeader {
