--- a/styles/sass/pages/_willowContact.scss
+++ b/styles/sass/pages/_willowContact.scss
@@ -1,7 +1,3 @@
-.contactFormBody {
-    min-height: 100vh;
-}
-
 .contactHeader {
     background-image: url('../willowAssets/contact-image-1.jpg');
     background-position: center;
@@ -11,6 +7,16 @@
         color: $whiteShade;
         position: relative;
         bottom: -15px;
+    }
+    @media (max-width: 575px) {
+        &__title {
+            font-size: 6.0rem;
+        }
+    }
+    @media (max-width: 430px) {
+        &__title {
+            font-size: 4.2rem;
+        }
     }
 }
 
@@ -30,6 +36,23 @@
     }
     &__rightSide {
         width: 70%;
+    }
+    @media (max-width: 815px) {
+        &__container {
+            flex-direction: column;
+        }
+        &__leftSide {
+            text-align: center;
+            width: 100%;
+        }
+        &__rightSide {
+            margin: 0 auto;
+        }
+    }
+    @media (max-width: 430px) {
+        &__rightSide {
+            width: 100%;
+        }
     }
 }
 
@@ -52,6 +75,14 @@
     }
     &__address {
         margin-top: 10px;
+    }
+    &__iconLink:hover {
+        color: $accent;
+    }
+    @media (max-width: 815px) {
+        &__socialList {
+            margin: 0 auto;
+        }
     }
 }
 
@@ -76,5 +107,15 @@
     &__messageBox, 
     &__submitButton {
         width: 100%;
+    }
+    @media (max-width: 815px) {
+        &__partOne {
+            flex-direction: column;
+        }
+        &__name, 
+        &__email {
+            width: 100%;
+            margin-top: 20px;
+        }
     }
 }
