--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -1,10 +1,10 @@
 button {
+    @include buttonText;
     background-color: $accent;
     text-transform: uppercase;
     padding: 10px 30px;
     cursor: pointer;
-
-    @include buttonText;
+    transition: all 0.3s ease;
 }
 
 button:hover {
