--- a/styles/sass/layout/_topNavBar.scss
+++ b/styles/sass/layout/_topNavBar.scss
@@ -15,6 +15,7 @@
         @include menuTextHomeAbout;
         color: $whiteShade;
         text-transform: uppercase;
+        transition: all 0.3s ease;
     }
     &__word {
         color: $whiteShade;
@@ -40,6 +41,7 @@
     &__dropdownLink {
         @include menuTextHomeAbout; 
         color: $whiteShade;
+        transition: all 0.3s ease;
     }
     &__link:hover, 
     &__dropdownLink:hover {
