--- a/styles/style.css
+++ b/styles/style.css
@@ -339,6 +339,8 @@ img {
   text-align: right;
   color: #F6F6F6;
   text-transform: uppercase;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .topNavBar__word {
@@ -372,6 +374,8 @@ img {
   line-height: 2.9rem;
   text-align: right;
   color: #F6F6F6;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .topNavBar__link:hover, .topNavBar__dropdownLink:hover {
@@ -427,15 +431,17 @@ footer p {
 }
 
 button {
-  background-color: #E4A436;
-  text-transform: uppercase;
-  padding: 10px 30px;
-  cursor: pointer;
   font-family: 'Abril Fatface', cursive;
   font-size: 2.0rem;
   letter-spacing: 0.1rem;
   line-height: 3.2rem;
   text-align: center;
+  background-color: #E4A436;
+  text-transform: uppercase;
+  padding: 10px 30px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 button:hover {
