added transition for hover states on blog and contact page

--- a/styles/sass/pages/_willowContact.scss
+++ b/styles/sass/pages/_willowContact.scss
@@ -67,6 +67,7 @@
     &__iconLink {
         color: $pine;
         font-size: 2.8rem;
+        transition: all 0.3s ease;
     }
     &__email {
         color: $black;
