--- a/styles/sass/pages/_willowBlogPost.scss
+++ b/styles/sass/pages/_willowBlogPost.scss
@@ -98,6 +98,7 @@
     &__link {
         color: $greenGrey;
         font-weight: 700;
+        transition: all 0.3s ease;
     }
     &__link:hover {
         color: $accent;
